fixed spacing with daily and footer

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -28,7 +28,7 @@
   color: #FFFFFF;
   font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 30px;
-  background: url("/images/OahuBackground.jpeg")  no-repeat fixed;
+  background: url("/images/OahuBackground.jpeg") no-repeat fixed center center;
   background-size: 100% 100%;
 }
 #landing-bottom {
@@ -60,8 +60,7 @@
   font-family: "Barlow Semi Condensed", sans-serif;
   color: white !important;
   /*padding: 0 !important;*/
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding: 20px 0;
   /*padding-left: 150px;*/
 }
 
@@ -104,6 +103,7 @@ dark-blue: 0C4D85
 }
 
 .daily-table {
+  padding-bottom: 175px;
   margin: 0 !important;
 }
 
